Add psr and monolog logger services support.

--- a/src/Resources/config/symfony.yml
+++ b/src/Resources/config/symfony.yml
@@ -54,3 +54,8 @@ service_aware:
       interface: "Bit3\Symfony\ServiceAwareBundle\Symfony\FrameworkBundle\Validator\ValidatorAwareInterface"
       method:    "setValidator"
       service:   "validator"
+
+    symfony.monolog_bundle.logger:
+      interface: "Bit3\Symfony\ServiceAwareBundle\Symfony\MonologBundle\Logger\LoggerAwareInterface"
+      method:    "setLogger"
+      service:   "monolog.logger"
