--- a/src/Resources/config/braincrafted.yml
+++ b/src/Resources/config/braincrafted.yml
@@ -2,5 +2,5 @@ service_aware:
   services:
     braincrafted.bootstrap_bundle.flash_message:
       interface: "Bit3\\Symfony\\ServiceAwareBundle\\Braincrafted\\BootstrapBundle\\FlashMessageAwareInterface"
-      method:    "setFlashMssage"
+      method:    "setFlashMessage"
       service:   "braincrafted_bootstrap.flash"
